--- a/templates/webmap.html
+++ b/templates/webmap.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     {% block title %}<title>Nairobi Bus Stops</title>{% endblock %}
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
     {% leaflet_js %}
     {% leaflet_css %}
     <script  src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
