Renamed CSS references.

--- a/templates/webmap.html
+++ b/templates/webmap.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
     {% leaflet_css %}
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
-    <link href="{% static 'css/MarkerCluster.css' %}" rel="stylesheet">
-    <link href="{% static 'css/MarkerCluster.Default.css' %}" rel="stylesheet">
+    <link href="{% static 'css/markercluster.css' %}" rel="stylesheet">
+    <link href="{% static 'css/markercluster-default.css' %}" rel="stylesheet">
     <!-- JS -->
     {% leaflet_js %}
     <script  src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
