--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,6 +5,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="description" content="Full-Stack personal website templare">
+    <meta name="keywords" content="Django, HTML, CSS, JavaScript, Docker">
+    <meta name="author" content="Joseph Kariuki">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
